fix: text align fix privacy-terms

--- a/src/styles/pages/privacy-terms.scss
+++ b/src/styles/pages/privacy-terms.scss
@@ -13,12 +13,13 @@
       p{
         padding: 50px 0;
         font-size: 1rem;
-          line-height: 150%;
-          text-align: justify;
+        line-height: 150%;
+        text-align: justify;
           strong{
             padding-top: 10px;
             font-size: 1.5rem;
             display: block;
+            text-align: left;
             @media only screen and (max-width: 700px) {
                 font-size: 1.25rem;
               }
